opam-version: "2.0"
maintainer: "David Scott <dave.scott@docker.com>"
authors: [
  "Anil Madhavapeddy <anil@recoil.org>"
  "David Scott <dave.scott@docker.com>"
  "David Sheets <dsheets@docker.com>"
  "Gaetan de Villele <gdevillele@gmail.com>"
  "Ian Campbell <ian.campbell@docker.com>"
  "Magnus Skjegstad <magnus@skjegstad.com>"
  "Mindy Preston <mindy.preston@docker.com>"
  "Sebastiaan van Stijn <github@gone.nl>"
  "Thomas Gazagnaire <thomas@gazagnaire.com>"
  "Thomas Leonard <thomas.leonard@docker.com>"
]
homepage:     "https://github.com/moby/vpnkit"
bug-reports:  "https://github.com/moby/vpnkit/issues"
dev-repo: "git+https://github.com/moby/vpnkit.git"
doc:          "https://moby.github.io/vpnkit/"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "5.0.0" }
  "ocaml-base-compiler" {= "5.0.0~rc1"}
  # "ocaml-variants" {= "5.0.0~rc1"}
  "dune"
  "alcotest" {with-test}
  "ounit2" {with-test}
  "tar" {>= "1.0.1"}
  "ipaddr" {>= "5.0.1"}
  "eio" {>= "0.6"}
  "lwt" {>= "5.4.0"}
  "luv"
  "luv_unix"
  "tcpip" {>= "7.0.0"}
  "base64" {>= "3.5.0"}
  "cstruct" {>= "6.0.0"}
  "pcap-format" {>= "0.4.0"}
  "cmdliner" {>= "1.1.0"}
  "charrua" {>= "1.3.0"}
  "charrua-client"
  "charrua-server"
  "hvsock" {>= "2.0.0"}
  "fd-send-recv" {>= "2.0.0"}
  "logs"
  "fmt"
  "astring"
  "ethernet" {>= "3.0.0"}
  "arp" {>= "3.0.0"}
  "mirage-entropy" {>= "0.5.0"}
  "mirage-kv" {>= "4.0.0"}
  "mirage-net" {>= "4.0.0"}
  "mirage-time" {>= "3.0.0"}
  "mirage-channel" {>= "4.0.1"}
  "mirage-stack"
  "http"
  "cohttp-eio" {>= "0.99.0"}
  "protocol-9p" {>= "2.0.0"}
  "mirage-vnetif" {>= "0.5.0"}
  "io-page"       {>= "3.0.0"}
  "uuidm"
  "ezjsonm" {>= "0.4.0"}
  "sha" {with-test}
  "stringext"
  "mirage-clock" {>= "4.0.0"}
  "mirage-clock-unix" {>= "4.0.0"}
  "mirage-random" {>= "3.0.0"}
  "mirage-random-stdlib"
  "re" {>= "1.9.0"}
  "ppx_inline_test"
]
# HACK
pin-depends:[
  # Luv doesn't like to be vendored and dune doesn't have the feature to fix it... :/
  [ "luv.dev" "git+https://github.com/patricoferris/luv#9726db8b18c6c50805dea80a0751589cfa5ad8da" ]
  [ "luv_unix.dev" "git+https://github.com/patricoferris/luv#9726db8b18c6c50805dea80a0751589cfa5ad8da" ]
  # Upgrades cmdliner and also sexplib
  [ "protocol-9p.dev" "git+https://github.com/patricoferris/ocaml-9p#22fa2d59f2695da627e4531185d626dabe2bfba1" ]
  # OCaml 5 fixes
  [ "fd-send-recv.dev" "git+https://github.com/xapi-project/ocaml-fd-send-recv#1c47d34726f30c2068b783a20c16da3ac707ea73" ]
  [ "hvsock.dev" "git+https://github.com/mirage/ocaml-hvsock#6b90ba4ab43257e05e377672f4e07b2d1b643588"]
  # OCaml 5 things
  [ "arp.dev" "git+https://github.com/patricoferris/arp#0e2df90cb6eca68c33e77bfe8c0552482c6218c9"]
  [ "ethernet.dev" "git+https://github.com/patricoferris/ethernet#99ed193ee18a0bb1f27e1af55c9b3e45b60de5bb"]
  [ "http.dev" "git+https://github.com/patricoferris/mirage-cohttp#e7712f3b48070fedcc4980725c7a51b576aa7ec3" ]
  [ "cohttp-eio.dev" "git+https://github.com/patricoferris/mirage-cohttp#e7712f3b48070fedcc4980725c7a51b576aa7ec3" ]
  [ "mirage-flow.dev" "git+https://github.com/patricoferris/mirage-flow#b81a3858c839f375d9ed4da66a55d0e8d4798bac"]
  [ "mirage-channel.dev" "git+https://github.com/patricoferris/mirage-flow#d7e696f670ff123474bd4a05878ad67c8a3b614f"]
  [ "mirage-net.dev" "git+https://github.com/patricoferris/mirage-net#75c5ec7060301211ccccbc8d36fb91a08fa36abd" ]
  [ "mirage-vnetif.dev" "git+https://github.com/patricoferris/mirage-vnetif#f092eb6d8621c1441718e2cc6419f6841a1ad4bf" ]
  [ "tcpip.dev" "git+https://github.com/patricoferris/mirage-tcpip#34d4761a05da6c49b9a63f714ebe2fb2dfcc7036" ]
]
synopsis: "VPN-friendly networking devices for HyperKit"
description: """
HyperKit is a hypervisor which runs on macOS using the "hypervisor.framework".
VPNKit implements a virtual ethernet device for HyperKit VMs in a VPN-friendly
way, by terminating and proxying all the TCP flows, caching and forwarding
DNS requests etc. HyperKit and VPNKit are used in Docker for Mac and Windows."""
x-opam-monorepo-opam-repositories: [
   "file://$OPAM_MONOREPO_CWD/repos/dune-universe"
   "file://$OPAM_MONOREPO_CWD/repos/alpha"
   "file://$OPAM_MONOREPO_CWD/repos/opam-repository"
 ]
# Could include these for additional reproducibility but less portability.
# x-opam-monorepo-global-opam-vars: [
#   [ "arch" "x86_64" ]
#   [ "os" "linux" ]
#   [ "os-distribution" "debian" ]
#   [ "os-family" "debian" ]
#   [ "os-version" "11" ]
# ]