(library
 (name hostnet)
 (inline_tests)
 (preprocess (pps ppx_inline_test))
 (libraries base64 cstruct logs ipaddr ppx_sexp_conv
   pcap-format ethernet arp tcpip.ipv4 tcpip.icmpv4 tcpip.udp
   tcpip.tcp tcpip.stack-direct charrua charrua-server dns dns_eio ofs luv luv_unix
   eio.unix threads astring fs9p dns_forward tar
   mirage-vnetif uuidm http cohttp-eio ezjsonm eio_luv
   duration mirage-time mirage-clock cohttp
   mirage-random tcpip.checksum forwarder cstructs sha)
 (foreign_stubs (language c) (names stubs_utils))
 (wrapped false))
